# TaggerTool

./: .gitignore  README.md  deploy_app.sh
assets/: demo.m4v
assets/annotations/: DSC00075.json  DSC00109.json  DSC00423.json  DSC00767.json  DSC01700.json
data/: sample.project
data/annotations/: DSC00075.json  DSC00109.json  DSC00423.json  DSC00767.json  DSC01700.json
data/native_ann/: 35_Basketball_basketballgame_ball_35_509.csv  35_Basketball_basketballgame_ball_35_513.csv  35_Basketball_basketballgame_ball_35_515.csv
data/xml/: 35_Basketball_basketballgame_ball_35_509.xml  35_Basketball_basketballgame_ball_35_513.xml  35_Basketball_basketballgame_ball_35_515.xml
py_tools/: coco_convert.py  pascal_convert.py
src/: CMakeLists.txt  annimgmanager.cpp  annimgmanager.h  annotationfilter.cpp  annotationfilter.h  bbox_item.cpp  bbox_item.h  bboxitem.cpp  bboxitem.h  circle_item.cpp  circle_item.h  custom_item.cpp  custom_item.h  dialogexporter.cpp  dialogexporter.h  dialogexporter.ui  dialoglabels.cpp  dialoglabels.h  dialoglabels.ui  editdialog.cpp  editdialog.h  editdialog.ui  expensiveroutines.cpp  expensiveroutines.h  graphicsview.cpp  graphicsview.h  heavytaskthread.cpp  heavytaskthread.h  imagecanvas.cpp  imagecanvas.h  imagecanvascommands.cpp  imagecanvascommands.h  imgstringlistmodel.cpp  imgstringlistmodel.h  line_item.cpp  line_item.h  lineformat.cpp  loadimganndialog.cpp  loadimganndialog.h  loadimganndialog.ui  (+16 more)
